# snapmap

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
snapmap/: __init__.py  cli.py  creds.py  fingerprint.py  issues.py  models.py  nmap_scan.py  pipeline.py  ports.py  prober.py  report.py  screenshot.py
snapmap/templates/: report.html.j2
